Categorias automaticas y 1a alerta

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,19 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      About
+    <ion-title  text-center>
+      Info-Track
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="card-background-page" >
 
+  <ion-card *ngFor="let dataitem of backdata" (click)="btncultura(dataitem)">
+    
+    <img src="assets/imgs/{{ dataitem.img }}" />
+    <div class="card-title"> {{ dataitem.title }}</div>
+    <div class="card-subtitle"> {{ dataitem.description }} </div>
+  </ion-card>
+   
 </ion-content>
+
