--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+<ion-tabs selectedIndex="1" tabsLayout="" color="primary" >
+  <ion-tab [root]="tab1Root" tabTitle="Info-Track" tabIcon="compass"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Home"  tabIcon="home" ></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Explorers" tabIcon="contacts"></ion-tab>
+  <!-- <ion-tab [root]="tab4Root" tabTitle="QR" tabIcon="bug" ></ion-tab> -->
 </ion-tabs>
