--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -8,10 +8,13 @@
 
 <ion-content>
   <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
+    <ion-list-header>Lista de amigos </ion-list-header>
+    <ion-item *ngFor="let usuario of usuarios">
+      <ion-icon name="contact" item-start></ion-icon>
+      <b>Nombre:</b> {{usuario.name}}
+      <br> Email: {{ usuario.email }}
     </ion-item>
   </ion-list>
+
+
 </ion-content>
