--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -53,7 +53,7 @@
   <button ion-button (click)="alerta()"  >Click</button>
 </div>
 
-
+  <button ion-button block (click)="cerrarSesion()">Cerrar Sesión</button>
 
   
 </ion-content>
