--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -7,23 +7,33 @@
 </ion-header>
 
 <ion-content>
+  <!--
   <ion-list>
-
-
-
-
-
-    <ion-list-header>Lista de amigos </ion-list-header>
-    <ion-item *ngFor="let usuario of usuarios">
-<ion-avatar item-start >
+  <ion-list-header>Lista de amigos </ion-list-header>
+  <ion-item *ngFor="let usuario of usuarios">
+  <ion-avatar item-start >
   <img src="assets/imgs/perfile.jpg">
-</ion-avatar>
-      <h2>
-        {{usuario.name}}
-      </h2>
-      <p> Email: {{ usuario.email }} </p>
-    </ion-item>
+  </ion-avatar>
+  <h2>
+  {{usuario.name}}
+  </h2>
+  <p> Email: {{ usuario.email }} </p>
+  </ion-item>
   </ion-list>
+-->
+
+
+<ion-card>
+  <ion-card-header>
+    titulo
+  </ion-card-header>
+  <img src="../../assets/imgs/dino.jpg" height="50%">
+  <ion-card-content>
+Contenido 
+  </ion-card-content>
+
+</ion-card>
+
 
 
 </ion-content>
