--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,9 +5,9 @@
 </ion-header>
 
 <ion-content padding>
-
+<!--
 <img src="assets/imgs/icon_app_home.png" height="40%" padding-left margin >
-
+-->
 
 
 <p text-justify >
@@ -47,13 +47,45 @@
 <br>
 <br>
 
-
 <div center >
-
+  
   <button ion-button (click)="alerta()"  >Click</button>
 </div>
-
+<!--
   <button ion-button block (click)="cerrarSesion()">Cerrar Sesión</button>
 
-  
+  <ion-card *ngIf="anime">
+    <ion-card-content>
+      <h1 text-center>
+        {{ anime }}
+      </h1>
+    </ion-card-content>
+  </ion-card>
+-->
+
+
+
+<br><br>
+<ion-list>
+  <ion-item>
+    <ion-label>Busqueda</ion-label>
+    <ion-input type="text" [(ngModel)]="xcode"  ></ion-input>
+  </ion-item>
+</ion-list>
+<button ion-button block color="secondary"  (click)="find()"  >Busqueda</button>
+
+
+
+
+<ion-card *ngIf="item >= 0"  >
+<ion-card-content>
+  {{ list[item] }}
+</ion-card-content>
+
+</ion-card>
+
+
+<button ion-button (click)="presentModal(list[item])">Modal</button>
+
+
 </ion-content>
