--- a/src/pages/page-cult/page-cult.html
+++ b/src/pages/page-cult/page-cult.html
@@ -3,16 +3,14 @@
 
   <ion-navbar>
     <ion-title>
-{{ items.title }}   JJ
-
-
+{{ items.title }}
     </ion-title>
   </ion-navbar>
 
 </ion-header>
 <ion-content padding>
   <ion-fab right bottom>
-    <button ion-fab color="light">
+    <button ion-fab color="primary">
       <ion-icon name="share"></ion-icon>
     </button>
     <ion-fab-list side="left">
@@ -23,10 +21,7 @@
         <ion-icon name="logo-twitter"></ion-icon>
       </button>
       <button ion-fab>
-        <ion-icon name="logo-vimeo"></ion-icon>
-      </button>
-      <button ion-fab>
-        <ion-icon name="logo-googleplus"></ion-icon>
+        <ion-icon name="logo-whatsapp"></ion-icon>
       </button>
     </ion-fab-list>
   </ion-fab>
