Agregados Datos de Guanajuato

--- a/src/pages/casacult/casacult.html
+++ b/src/pages/casacult/casacult.html
@@ -11,7 +11,7 @@
  
 <ion-content padding>
 
-<ion-card *ngFor="let items of fog"  (click)="paragon(items)"  >
+<ion-card *ngFor="let items of data"  (click)="paragon(items)"  >
   <ion-card-header>
     {{ items.title }}
   </ion-card-header>
